tests/baselines/reference/switchCaseWithUnionTypes01.errors.txt
tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithUnionTypes01.ts(23,10): error TS2323: Type 'boolean' is not comparable with type 'string | number'.
  Type 'boolean' is not comparable with type 'number'.


==== tests/cases/conformance/types/typeRelationships/comparable/switchCaseWithUnionTypes01.ts (1 errors) ====
    
    var strOrNum: string | number;
    var numOrBool: number | boolean;
    var str: string;
    var num: number;
    var bool: boolean;
    
    switch (strOrNum) {
        // Identical
        case strOrNum:
            break;
    
        // Constituents
        case str:
        case num:
            break;
    
        // Overlap in constituents
        case numOrBool:
            break;
    
        // No relation
        case bool:
             ~~~~
!!! error TS2323: Type 'boolean' is not comparable with type 'string | number'.
!!! error TS2323:   Type 'boolean' is not comparable with type 'number'.
            break;
    }